--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,90 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_gradient"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="307dp"
+        android:layout_height="546dp"
+        android:alpha="0.3"
+        android:rotation="-53"
+        app:srcCompat="@drawable/bg"
+        tools:layout_editor_absoluteX="233dp"
+        tools:layout_editor_absoluteY="389dp" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="129dp"
+        android:layout_height="122dp"
+        android:alpha="0.3"
+        android:rotation="100"
+        app:srcCompat="@drawable/circle"
+        tools:layout_editor_absoluteX="-59dp"
+        tools:layout_editor_absoluteY="-53dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:orientation="horizontal"
+            android:rotation="0"
+            android:rotationY="0">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/designer"
+                android:text="@string/title"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textSize="60dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="567dp"
+            android:gravity="center"
+            android:orientation="vertical"
+
+            >
+
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="300dp"
+
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/primary_light"
+                android:fontFamily="@font/designer"
+                android:insetTop="0dp"
+                android:text="UN JUGADOR"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                app:cornerRadius="10dp" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="@color/primary_light"
+                android:fontFamily="@font/designer"
+                android:insetTop="0dp"
+                android:text="MULTIJUGADOR"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                app:cornerRadius="10dp" />
+        </LinearLayout>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
