--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <!-- Light -->
+    <color name="backround_light">#F2F2F0</color>
+    <color name="primary_light">#418FBF</color>
+
 </resources>
