--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,38 +5,41 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_gradient"
+    android:background="@drawable/background"
+
     tools:context=".MainActivity">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="307dp"
-        android:layout_height="546dp"
-        android:alpha="0.3"
-        android:rotation="-53"
-        app:srcCompat="@drawable/bg"
-        tools:layout_editor_absoluteX="233dp"
-        tools:layout_editor_absoluteY="389dp" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="129dp"
-        android:layout_height="122dp"
-        android:alpha="0.3"
-        android:rotation="100"
-        app:srcCompat="@drawable/circle"
-        tools:layout_editor_absoluteX="-59dp"
-        tools:layout_editor_absoluteY="-53dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="top"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_gravity="top"
+            android:gravity="end"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="0"
+                android:background="#00FFFFFF"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/settings" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:rotation="0"
             android:rotationY="0">
@@ -55,40 +58,88 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="567dp"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
 
             >
 
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="300dp"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="211dp"
+                android:orientation="vertical"></LinearLayout>
 
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:backgroundTint="@color/primary_light"
-                android:fontFamily="@font/designer"
-                android:insetTop="0dp"
-                android:text="UN JUGADOR"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                app:cornerRadius="10dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:backgroundTint="@color/primary_light"
-                android:fontFamily="@font/designer"
-                android:insetTop="0dp"
-                android:text="MULTIJUGADOR"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                app:cornerRadius="10dp" />
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="Seleccione un modo de juego:"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/btnplayer"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="@color/black"
+                    android:drawableLeft="@drawable/player24x24"
+                    android:fontFamily="@font/designer"
+                    android:insetTop="0dp"
+                    android:text="UN JUGADOR"
+                    android:textAlignment="center"
+                    android:textSize="24sp"
+                    app:cornerRadius="10dp"
+                    app:strokeColor="@color/primary_light"
+                    app:strokeWidth="2dp" />
+
+
+                <Button
+                    android:id="@+id/btnmultiplayer"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="@color/black"
+                    android:drawableLeft="@drawable/multiplayer24x24"
+                    android:fontFamily="@font/designer"
+                    android:insetTop="0dp"
+                    android:text="MULTIJUGADOR"
+                    android:textAlignment="center"
+                    android:textSize="24sp"
+                    app:cornerRadius="10dp"
+                    app:strokeColor="@color/primary_light"
+                    app:strokeWidth="2dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="fill_vertical"
+                    android:gravity="bottom"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/roboto_medium"
+                        android:text="Tic-Tac-Toe | Grupo 6 - Estructura de datos ©"
+                        android:textAlignment="center"
+                        android:textStyle="italic" />
+                </LinearLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
-
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
