Versión 1 de UI en juego vs cpu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,7 @@
                     android:insetTop="0dp"
                     android:text="UN JUGADOR"
                     android:textAlignment="center"
+                    android:textColor="#F2F2F0"
                     android:textSize="24sp"
                     app:cornerRadius="10dp"
                     app:strokeColor="@color/primary_light"
@@ -114,6 +115,7 @@
                     android:insetTop="0dp"
                     android:text="MULTIJUGADOR"
                     android:textAlignment="center"
+                    android:textColor="#F2F2F0"
                     android:textSize="24sp"
                     app:cornerRadius="10dp"
                     app:strokeColor="@color/primary_light"
