--- a/app/src/main/res/layout/activity_ganador.xml
+++ b/app/src/main/res/layout/activity_ganador.xml
@@ -1,24 +1,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#D3F4FF">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textoGanador"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="¡Jugador X ganó!"
-        android:textSize="24sp"
-        android:layout_centerInParent="true"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:textColor="#000" />
+        android:background="@drawable/xobg"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/botonReiniciar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Reiniciar"
-        android:layout_below="@id/textoGanador"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
+        <TextView
+            android:id="@+id/textoGanador"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="¡Jugador X ganó!"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="34sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/botonReiniciar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/roboto_medium"
+            android:insetTop="0dp"
+            android:text="Menú Principal"
+            android:textAlignment="center"
+            android:textColor="@color/backround_light"
+            android:textSize="24sp"
+            app:cornerRadius="10dp"
+            app:strokeColor="@color/primary_light"
+            app:strokeWidth="2dp" />
+    </LinearLayout>
+
 </RelativeLayout>
