--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
                 android:text="@string/title"
                 android:textAlignment="center"
                 android:textAllCaps="true"
+                android:textColor="@color/black"
                 android:textSize="60dp" />
         </LinearLayout>
 
@@ -83,6 +84,7 @@
                     android:fontFamily="@font/roboto_medium"
                     android:text="Seleccione un modo de juego:"
                     android:textAlignment="center"
+                    android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -97,7 +99,7 @@
                     android:insetTop="0dp"
                     android:text="UN JUGADOR"
                     android:textAlignment="center"
-                    android:textColor="#F2F2F0"
+                    android:textColor="@color/backround_light"
                     android:textSize="24sp"
                     app:cornerRadius="10dp"
                     app:strokeColor="@color/primary_light"
@@ -115,7 +117,7 @@
                     android:insetTop="0dp"
                     android:text="MULTIJUGADOR"
                     android:textAlignment="center"
-                    android:textColor="#F2F2F0"
+                    android:textColor="@color/backround_light"
                     android:textSize="24sp"
                     app:cornerRadius="10dp"
                     app:strokeColor="@color/primary_light"
@@ -137,6 +139,7 @@
                         android:fontFamily="@font/roboto_medium"
                         android:text="Tic-Tac-Toe | Grupo 6 - Estructura de datos ©"
                         android:textAlignment="center"
+                        android:textColor="@color/black"
                         android:textStyle="italic" />
                 </LinearLayout>
 
