--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,9 @@
     <!-- Light -->
     <color name="backround_light">#F2F2F0</color>
     <color name="primary_light">#418FBF</color>
+    <color name="secondary_light">#BF0413</color>
+    <color name="third_light">#F2B705</color>
+    <color name="winner">#F2A20C</color>
+    <!-- Dark -->
 
 </resources>
