--- a/app/src/main/res/layout/activity_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe.xml
@@ -30,7 +30,7 @@
 
         <ImageButton
             android:id="@+id/btnexit"
-            android:layout_width="wrap_content"
+            android:layout_width="37dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="#00FFFFFF"
