--- a/app/src/main/res/layout/activity_multiplayer_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_multiplayer_tic_tac_toe.xml
@@ -7,31 +7,11 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tic-Tac-Toe"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="651dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/roboto_medium"
-            android:text="Abandonar juego"
-            android:textAlignment="textEnd"
-            android:textColor="@color/black" />
 
         <ImageButton
             android:id="@+id/btnexit"
@@ -42,17 +22,28 @@
             android:scaleType="centerInside"
             app:srcCompat="@drawable/exit" />
 
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="651dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/roboto_medium"
+            android:text="Abandonar juego"
+            android:textAlignment="textStart"
+            android:textColor="@color/black" />
+
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/playerbar"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:gravity="center"
+        android:gravity="center|right"
         android:orientation="horizontal"
         android:visibility="visible">
 
         <!-- Icono y texto del Jugador 1 -->
+
         <ImageView
             android:id="@+id/player1"
             android:layout_width="60dp"
@@ -62,8 +53,8 @@
             app:srcCompat="@drawable/player1" />
 
         <TextView
-            android:id="@+id/player1text"
-            android:layout_width="106dp"
+            android:id="@+id/player1Text"
+            android:layout_width="166dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/roboto_medium"
@@ -75,53 +66,11 @@
 
         <!-- Icono y texto del Jugador 2 -->
 
-        <ImageView
-            android:id="@+id/player2"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="16dp"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/player2" />
-
-        <TextView
-            android:id="@+id/player2text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_medium"
-            android:text="Jugador 2 (X)"
-            android:textAlignment="viewStart"
-            android:textColor="#F3B503"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:layout_marginStart="8dp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <TextView
-            android:id="@+id/player1Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:textColor="#BE0413"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/player2Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:textColor="#418FBF"
-            android:textStyle="bold"
-            android:layout_marginStart="32dp" />
-    </LinearLayout>
-<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="450dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -271,5 +220,38 @@
                 app:strokeColor="#000000"
                 app:strokeWidth="3dp" />
         </GridLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/playerbar2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center|left"
+        android:orientation="horizontal"
+        android:visibility="visible">
+
+        <!-- Icono y texto del Jugador 1 -->
+
+        <!-- Icono y texto del Jugador 2 -->
+
+        <ImageView
+            android:id="@+id/player2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="16dp"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/player2" />
+
+        <TextView
+            android:id="@+id/player2Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/roboto_medium"
+            android:text="Jugador 2 (X)"
+            android:textAlignment="viewStart"
+            android:textColor="#F3B503"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
