--- a/app/src/main/res/layout/activity_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe.xml
@@ -18,16 +18,6 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="651dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/roboto_medium"
-            android:text="Abandonar juego"
-            android:textAlignment="textEnd"
-            android:textColor="@color/black" />
-
         <ImageButton
             android:id="@+id/btnexit"
             android:layout_width="wrap_content"
@@ -36,6 +26,16 @@
             android:backgroundTint="#00FFFFFF"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/exit" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="651dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/roboto_medium"
+            android:text="Abandonar juego"
+            android:textAlignment="textStart"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -72,7 +72,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="500dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -225,7 +225,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/playerbar"
+        android:id="@+id/playerbar2"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:gravity="center"
