--- a/app/src/main/res/layout/activity_seleccion_dificultad.xml
+++ b/app/src/main/res/layout/activity_seleccion_dificultad.xml
@@ -15,47 +15,8 @@
         android:gravity="top"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:gravity="end"
-            android:orientation="horizontal">
 
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="0"
-                android:background="#00FFFFFF"
-                android:scaleType="centerInside"
-                app:srcCompat="@drawable/settings" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:rotation="0"
-            android:rotationY="0">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/designer"
-                android:text="@string/title"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="@color/black"
-                android:textSize="60dp" />
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,14 +41,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="Seleccione un modo de juego:"
+                    android:text="Seleccione una dificultad"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <Button
-                    android:id="@+id/btnplayer"
+                    android:id="@+id/btnMedio"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -95,7 +56,7 @@
                     android:drawableLeft="@drawable/player24x24"
                     android:fontFamily="@font/designer"
                     android:insetTop="0dp"
-                    android:text="UN JUGADOR"
+                    android:text="MEDIO"
                     android:textAlignment="center"
                     android:textColor="@color/backround_light"
                     android:textSize="24sp"
@@ -105,7 +66,7 @@
 
 
                 <Button
-                    android:id="@+id/btnmultiplayer"
+                    android:id="@+id/btnExperto"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -113,7 +74,7 @@
                     android:drawableLeft="@drawable/multiplayer24x24"
                     android:fontFamily="@font/designer"
                     android:insetTop="0dp"
-                    android:text="MULTIJUGADOR"
+                    android:text="DIFICIL"
                     android:textAlignment="center"
                     android:textColor="@color/backround_light"
                     android:textSize="24sp"
