--- a/app/src/main/res/layout/activity_ganador.xml
+++ b/app/src/main/res/layout/activity_ganador.xml
@@ -23,6 +23,22 @@
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/botonHistorial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/roboto_medium"
+            android:insetTop="0dp"
+            android:text="Ver Historial"
+            android:textAlignment="center"
+            android:textColor="@color/backround_light"
+            android:textSize="24sp"
+            app:cornerRadius="10dp"
+            app:strokeColor="@color/primary_light"
+            app:strokeWidth="2dp" />
+
+        <Button
             android:id="@+id/botonReiniciar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,5 +54,4 @@
             app:strokeColor="@color/primary_light"
             app:strokeWidth="2dp" />
     </LinearLayout>
-
 </RelativeLayout>
