--- a/app/src/main/res/layout/activity_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe.xml
@@ -18,16 +18,6 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="651dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/roboto_medium"
-            android:text="Abandonar juego"
-            android:textAlignment="textEnd"
-            android:textColor="@color/black" />
-
         <ImageButton
             android:id="@+id/btnexit"
             android:layout_width="wrap_content"
@@ -36,6 +26,16 @@
             android:backgroundTint="#00FFFFFF"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/exit" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="651dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/roboto_medium"
+            android:text="Abandonar juego"
+            android:textAlignment="textStart"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -72,7 +72,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="500dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -96,7 +96,6 @@
                 android:backgroundTint="#F0F0EF"
                 android:fontFamily="@font/designer"
                 android:textAlignment="center"
-                android:textColor="#BF0413"
                 android:textSize="45sp"
                 app:cornerRadius="10dp"
                 app:strokeColor="#000000"
@@ -111,7 +110,6 @@
                 android:backgroundTint="#F0F0EF"
                 android:fontFamily="@font/designer"
                 android:textAlignment="center"
-                android:textColor="#BF0413"
                 android:textSize="45sp"
                 app:cornerRadius="10dp"
                 app:strokeColor="#000000"
@@ -126,7 +124,6 @@
                 android:backgroundTint="#F0F0EF"
                 android:fontFamily="@font/designer"
                 android:textAlignment="center"
-                android:textColor="#BF0413"
                 android:textSize="45sp"
                 app:cornerRadius="10dp"
                 app:strokeColor="#000000"
@@ -141,7 +138,6 @@
                 android:backgroundTint="#F0F0EF"
                 android:fontFamily="@font/designer"
                 android:textAlignment="center"
-                android:textColor="#BF0413"
                 android:textSize="45sp"
                 app:cornerRadius="10dp"
                 app:strokeColor="#000000"
@@ -156,7 +152,6 @@
                 android:backgroundTint="#F0F0EF"
                 android:fontFamily="@font/designer"
                 android:textAlignment="center"
-                android:textColor="#BF0413"
                 android:textSize="45sp"
                 app:cornerRadius="10dp"
                 app:strokeColor="#000000"
@@ -171,7 +166,6 @@
                 android:backgroundTint="#F0F0EF"
                 android:fontFamily="@font/designer"
                 android:textAlignment="center"
-                android:textColor="#BF0413"
                 android:textSize="45sp"
                 app:cornerRadius="10dp"
                 app:strokeColor="#000000"
@@ -186,7 +180,6 @@
                 android:backgroundTint="#F0F0EF"
                 android:fontFamily="@font/designer"
                 android:textAlignment="center"
-                android:textColor="#BF0413"
                 android:textSize="45sp"
                 app:cornerRadius="10dp"
                 app:strokeColor="#000000"
@@ -201,7 +194,6 @@
                 android:backgroundTint="#F0F0EF"
                 android:fontFamily="@font/designer"
                 android:textAlignment="center"
-                android:textColor="#BF0413"
                 android:textSize="45sp"
                 app:cornerRadius="10dp"
                 app:strokeColor="#000000"
@@ -216,7 +208,6 @@
                 android:backgroundTint="#F0F0EF"
                 android:fontFamily="@font/designer"
                 android:textAlignment="center"
-                android:textColor="#BF0413"
                 android:textSize="45sp"
                 app:cornerRadius="10dp"
                 app:strokeColor="#000000"
