--- a/app/src/main/res/layout/activity_ganador.xml
+++ b/app/src/main/res/layout/activity_ganador.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textoGanador"
+            android:id="@+id/textTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -23,8 +23,24 @@
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/btnhistorial"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/roboto_medium"
+            android:insetTop="0dp"
+            android:text="Ver Historial"
+            android:textAlignment="center"
+            android:textColor="@color/backround_light"
+            android:textSize="24sp"
+            app:cornerRadius="10dp"
+            app:strokeColor="@color/primary_light"
+            app:strokeWidth="2dp" />
+
+        <Button
             android:id="@+id/botonReiniciar"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:backgroundTint="@color/black"
@@ -37,6 +53,7 @@
             app:cornerRadius="10dp"
             app:strokeColor="@color/primary_light"
             app:strokeWidth="2dp" />
+
     </LinearLayout>
 
 </RelativeLayout>
