--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -34,7 +34,9 @@
                 android:layout_height="33dp"
                 android:layout_marginLeft="2dp"
                 android:layout_weight="1"
-                android:text="Volver al menú principal" />
+                android:text="Volver al menú principal"
+                android:textColor="#070707"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <TextView
@@ -63,7 +65,8 @@
                     android:id="@+id/textHistorial"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="#000000" />
             </LinearLayout>
         </ScrollView>
 
